src/test/ui/proc-macro/turbo-proc-macro.stderr
error[E0425]: cannot find function `f` in this scope
  --> $DIR/turbo-proc-macro.rs:7:5
   |
LL |     f :: < Vec < _ > > ( ) ;
   |     ^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
